# mac_battery_percentage

./: .envrc.sample  .gitignore  README.md  pyproject.toml  setup.cfg
src/: logger.py  main.py
